--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,10 @@
     @apply bg-indigo-700 hover:bg-indigo-800 p-2 rounded cursor-pointer;
   }
 
+  .genre-button {
+    @apply bg-indigo-700 hover:bg-indigo-800 px-4 py-2 rounded-full inline-flex
+  }
+
   .search {
     @apply w-full bg-light-100/5 px-4 py-3 rounded-lg mt-10 max-w-3xl mx-auto;
 
